# ParallelStrategyBacktester

./: Doxyfile  LICENSE
docs/: README.md
docs/img/: dependencies.dot
src/: .gitignore  CMakeLists.txt
src/AlgoTrading/: AlgoTrading.ixx  BrokerConnection.ixx  CMakeLists.txt  MarketData.ixx  Robot.cpp
src/BacktestingLib/: Backtesting.ixx  CMakeLists.txt  MarketDataManager.cpp  SimulatedBrokerConnection.cpp  StrategyOptimizer.cpp  StrategyTester.cpp  TradingManager.cpp
src/BacktestingLib/test/: CMakeLists.txt  MarketDataManagerTests.cpp
src/MovingAverageRobot/: CMakeLists.txt  MovingAverageRobot.ixx
src/TestOfStrategy/: CMakeLists.txt  TickParser.cpp  testOfStrategy.cpp
src/Utils/: CMakeLists.txt  CSVParser.cpp  Utils.ixx
src/Utils/test/: CMakeLists.txt  CSVParserTests.cpp  TimePointFromString.cpp  tests.cpp
tests/data/: AUDCAD_202211101500_202211102358.csv
